# home_work

./: .env.exemple  .gitignore  README.md  main.py  pyproject.toml
src/: csv_pandas.py  decorators.py  filters.py  generators.py  mascks.py  processing.py  reports.py  utils.py  widget.py
tests/: test.py  test_csv_pandas.py  test_decorators.py  test_generators.py  test_reports.py  tests_mascks.py  tests_processing.py  tests_widget.py
